# polymorphism_3_exercise_uni

./: CMakeLists.txt  README.md  main.cpp
classes/: Animal.cpp  Animal.h  Cat.cpp  Cat.h  Feline.cpp  Feline.h  Food.cpp  Food.h  Mammal.cpp  Mammal.h  Meat.cpp  Meat.h  Mouse.cpp  Mouse.h  Tiger.cpp  Tiger.h  Vegetable.cpp  Vegetable.h  Zebra.cpp  Zebra.h
